--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,13 @@
+/* Asterisk wildcard selector to overide default styles added by the browser*/
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+
+
 /* Header */
 header{
     background-color: lightcoral
