--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,13 @@ h1{
     border-bottom: 1px solid #3a3a3a;
 }
 
+/* Navbar styles with dropdown toggle*/
+nav{
+    position: absolute left;
+    background-color: #ffffff;
+    display: none;
+}
+
 /* Main Content */
 main {
     background-color: lightblue;
