--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,3 +130,12 @@ footer{
         margin-top: 79px;
     }
 }
+
+/*Media Query: screens larger than 992px*/
+@media screen and (min-width: 992px){
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+
+
+}
