--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,12 +92,18 @@ main {
 }
 
 /* Footer */
-footer{
-    background-color: orange;
+#social-networks{
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
-#links{
-    display: block;
+#social-networks i{
+    font-sioze: 160px;
+    padding: 5%;
+    color: #3a3a3a;
 }
 /*Media query: tablets and larger (768px and up)*/
 
