--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,7 +93,7 @@ main {
 #hero{
     height: 600px;
     width: 100%;
-    background-color: lightgreen;
+    background: URL("../images/hero-image.webp") no-repeat center center/cover;
 }
 
 /* Footer */
