made the styling for the hero image text the same as the rest of the website

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,14 @@ body{
 }
 
 
+h1, h2, h3{
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
+
 /* Header */
 header{
     background-color: #ffffff;
@@ -35,13 +43,6 @@ header{
 header a{
     text-decoration: none;
     color: inherit;
-}
-
-h1{
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu{
@@ -89,6 +90,7 @@ main {
     flex: 1 0 auto;
     margin-top: 47px;
 }
+
 /*Hero image*/
 #hero{
     height: 600px;
