--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,13 +91,29 @@ main {
     margin-top: 47px;
 }
 
-/*Hero image*/
+/*Hero Section*/
 #hero{
     height: 600px;
     width: 100%;
     background: URL("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
 }
 
+#cover-text{
+    /*Rgba is the same as RGB but adds an extra value for opacity to make it semi-transparent*/
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 14px;
+}
+
+#cover-text > h2, #cover-text > h3{
+    color: #ffffff;
+}
 /* Footer */
 #social-networks{
     text-align: center;
