used a media query to adjust the cover text positioning for larger screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,6 +161,12 @@ main {
     main{
         margin-top: 79px;
     }
+
+    /*Hero section*/
+    #cover-text {
+        width: 300px;
+        right: 50px;
+    }
 }
 
 /*Media Query: screens larger than 992px*/
