--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,6 +99,27 @@ main {
     position: relative;
 }
 
+/*Reasons section*/
+#reasons{
+    margin: 20px auto;
+    width: 90%;
+    border: 1px solid black;
+}
+
+#reasons > h2 {
+    font-size: 280%;
+    text-align: center;
+}
+
+#benefits{
+    margin-top: 20px;
+}
+
+#benefits > div{
+    line-height: 20px;
+    margin-top: 20px;
+}
+
 #cover-text{
     /*Rgba is the same as RGB but adds an extra value for opacity to make it semi-transparent*/
     background-color: rgba(241, 109, 107, .7);
@@ -167,6 +188,9 @@ main {
         width: 300px;
         right: 50px;
     }
+
+    /*Benefits physical*/
+
 }
 
 /*Media Query: screens larger than 992px*/
