--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,27 +99,6 @@ main {
     position: relative;
 }
 
-/*Reasons section*/
-#reasons{
-    margin: 20px auto;
-    width: 90%;
-    border: 1px solid black;
-}
-
-#reasons > h2 {
-    font-size: 280%;
-    text-align: center;
-}
-
-#benefits{
-    margin-top: 20px;
-}
-
-#benefits > div{
-    line-height: 20px;
-    margin-top: 20px;
-}
-
 #cover-text{
     /*Rgba is the same as RGB but adds an extra value for opacity to make it semi-transparent*/
     background-color: rgba(241, 109, 107, .7);
@@ -130,6 +109,38 @@ main {
     min-height: 200px;
     padding-top: 40px;
     padding-left: 14px;
+}
+
+/*Reasons section*/
+#reasons{
+    margin: 20px auto;
+    width: 90%;
+    border: 1px solid black;
+}
+
+#reasons > h2 {
+    font-size: 280%;
+    text-align: center;
+    margin-bottom: 20px
+}
+
+hr{
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+/*Benefits*/
+#benefits{
+    margin-top: 20px;
+}
+
+#benefits div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
 }
 
 #cover-text > h2, #cover-text > h3{
