--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,10 +118,9 @@ main {
 #reasons{
     margin: 20px auto;
     width: 90%;
-    border: 1px solid black;
 }
 
-#reasons > h2 {
+#reasons h2 {
     font-size: 280%;
     text-align: center;
     margin-bottom: 20px
@@ -130,10 +129,9 @@ main {
 #benefits-mental > div, #benefits-physical > div {
     line-height: 20px;
     margin-bottom: 20px;
-    margin: 5px;
 }
 
-#reasons hr{
+ hr{
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
