--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -114,6 +114,7 @@ main {
 #cover-text > h2, #cover-text > h3{
     color: #ffffff;
 }
+
 /*Reasons section*/
 #reasons{
     margin: 20px auto;
@@ -140,6 +141,12 @@ main {
     padding: 0 20px;
 }
 
+#circle-cover-bg{
+    padding-bottom: 20px;
+    width: 90vw;
+    height: 90vw;
+    background: url("../images/reasons-image.webp") no-repeat;
+}
 /* Footer */
 #social-networks{
     text-align: center;
