made the meetup times responsive to screen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,6 +173,22 @@ main {
     flex-wrap: wrap;
 }
 
+#times div{
+    color:#fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+}
+
+#times h3{
+    /*Overrides the color for h3 elements that was made earlier in the code*/
+    color: #fafafa;
+}
+
 #social-networks i{
     font-size: 160%;
     padding: 5%;
