--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -159,6 +159,17 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+/*Gallery page*/
+#photos img{
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+}
 /* Footer */
 #social-networks{
     text-align: center;
