--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -169,7 +169,31 @@ main {
 #photos {
     line-height: 0;
 }
+
+
+/*Sign up */
+main{
+    display: flex;
+    flex-direction: column;
 }
+#signup{
+    background: url("../images/signup-image.webp") no-repeat center/cover;
+    background-size: cover;
+    background-position: 75%;
+    flex-grow: 1;
+}
+
+#signup-form > h2{
+    color: #fafafa;
+    padding-bottom: 20px;
+}
+
+#signup-form{
+    display: relative;
+    color:#ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+}
+
 /* Footer */
 #social-networks{
     text-align: center;
