--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,6 +176,7 @@ main{
     display: flex;
     flex-direction: column;
 }
+
 #signup{
     background: url("../images/signup-image.webp") no-repeat center/cover;
     background-size: cover;
@@ -183,17 +184,51 @@ main{
     flex-grow: 1;
 }
 
+#signup-form{
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    display: relative;
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-top: 20px;
+}
+
 #signup-form > h2{
+    position: relative;
     color: #fafafa;
     padding-bottom: 20px;
+    padding-top: 30px;
 }
 
-#signup-form{
-    display: relative;
-    color:#ffffff;
-    background-color: rgba(60, 60, 60, 0.6);
+#signup-form > input, 
+#signup-form > label,
+#signup-form > h2{
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
+.radio-buttons{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+input[type="text"]{
+    background: transparent;
+    color: #fafafa;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
+.join-button{
+    background-color: #454b1b;
+    color: #fafafa;
+    font-size: 100%;
+    padding: 15px 32px;
+    border-radius: 2px;
+    margin-bottom: 30px;
+}
 /* Footer */
 #social-networks{
     text-align: center;
