--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,62 +172,61 @@ main {
 
 
 /*Sign up */
-main{
+/* Main content */
+main {
+    /* Enlarge main element to push footer down*/
+    flex: 1 0 auto;
+    /* Add margin at the top to prevent content from being covered by the header */
+    margin-top: 47px;
+    /* Enable flex properties for child elements */
     display: flex;
     flex-direction: column;
 }
 
-#signup{
-    background: url("../images/signup-image.webp") no-repeat center/cover;
+/* Form */
+#signup {
+    background-image: url("../images/signup-image.webp");
     background-size: cover;
     background-position: 75%;
+    padding: 20px 10% 0 10%;
     flex-grow: 1;
 }
 
-#signup-form{
+#signup-form {
     color: #ffffff;
     background-color: rgba(60, 60, 60, 0.6);
-    display: relative;
-    margin-right: 10%;
-    margin-left: 10%;
-    margin-top: 20px;
+    padding: 30px;
 }
 
-#signup-form > h2{
-    position: relative;
+#signup-form>h2 {
     color: #fafafa;
-    padding-bottom: 20px;
-    padding-top: 30px;
+    margin-bottom: 20px;
 }
 
-#signup-form > input, 
-#signup-form > label,
-#signup-form > h2{
-    margin-right: 30px;
-    margin-left: 30px;
-}
-
-.radio-buttons{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-input[type="text"]{
+.text-input {
     background: transparent;
     color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
     border: 1px solid #fafafa;
     border-radius: 2px;
+    padding: 0 5px;
 }
 
-.join-button{
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
     background-color: #454b1b;
     color: #fafafa;
-    font-size: 100%;
-    padding: 15px 32px;
-    border-radius: 2px;
-    margin-bottom: 30px;
 }
 /* Footer */
 #social-networks{
@@ -237,6 +236,14 @@ input[type="text"]{
     justify-content: space-evenly;
     list-style-type: none;
 }
+
+.text-input{
+    background: transparent;
+    color: #fafafa;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
 
 /*Meetup Times*/
 #times{
@@ -335,7 +342,27 @@ input[type="text"]{
         column-gap: 0;
     }
 
+    /* Form */
+    #signup {
+        background-position: center;
+        position: relative;
+    }
 
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
 
 /*Media Query: screens larger than 992px*/
